--- a/src/app/pages/extensions/extensions/extensions.component.html
+++ b/src/app/pages/extensions/extensions/extensions.component.html
@@ -2,15 +2,25 @@
     <div class="mb-4">
         <h2 class="text-center border-bottom">Extensiones teléfonicas</h2>
     </div>
-    <div class="mt-3">
+    <div class="mt-3 d-flex justify-content-between">
         <form>
             <div class="mb-3 row">
                 <label for="table-filtering-search" class="col-xs-3 col-sm-auto col-form-label">Buscar:</label>
                 <div class="col-xs-3 col-sm-auto">
-                    <input id="table-filtering-search" class="form-control" type="text" [formControl]="filter" />
+                    <input
+                    type="text"
+                    class="form-control mb-3"
+                    placeholder="Buscar..."
+                    [(ngModel)]="search_text"
+                    (input)="filterData()"
+                    name="search_text"
+                  />
                 </div>
             </div>
         </form>
+        <div>
+            <button type="button" class="btn btn-primary" (click)="downloadExcel()">Excel</button>
+        </div>
     </div>
     <table class="table table-bordered">
         <thead>
@@ -24,25 +34,25 @@
             </tr>
         </thead>
         <tbody>
-            @for (extension of extensions$ | async; track extension.name; let i = $index) {
+            @for (extension of paginated_data; track extension.name; let i = $index) {
             <tr class="text-center" >
                 <td>
-                    {{extension.extension_id}}
+                    <ngb-highlight [result]="extension.extension_id.toString()" [term]="search_text"/>
                 </td>
                 <td>
-                    <ngb-highlight [result]="extension.name" [term]="filter.value"/>
+                    <ngb-highlight [result]="extension.name" [term]="search_text"/>
                 </td>
                 <td>
-                    <ngb-highlight [result]="extension.extension" [term]="filter.value"/>
+                    <ngb-highlight [result]="extension.extension" [term]="search_text"/>
                 </td>
                 <td>
-                    <ngb-highlight [result]="extension.contact.organization" [term]="filter.value"/>
+                    <ngb-highlight [result]="extension.contact.organization" [term]="search_text"/>
                 </td>
                 <td>
-                    <ngb-highlight [result]="extension.contact.location" [term]="filter.value"/>
+                    <ngb-highlight [result]="extension.contact.location" [term]="search_text"/>
                 </td>
                 <td>
-                    <ngb-highlight [result]="extension.did_number" [term]="filter.value"/>
+                    <ngb-highlight [result]="extension.did_number" [term]="search_text"/>
                 </td>
             </tr>
         } @empty {
@@ -52,19 +62,12 @@
         }
         </tbody>
     </table>
-    <!-- <div class="d-flex justify-content-between p-2">
+    <div class="d-flex justify-content-between p-2">
         <ngb-pagination
-            [collectionSize]="collectionSize"
-            [(page)]="page"
-            [pageSize]="pageSize"
-            (pageChange)="refreshExtensions()"
-        >
-        </ngb-pagination>
-    
-        <select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshExtensions()">
-            <option [ngValue]="2">2 items per page</option>
-            <option [ngValue]="4">4 items per page</option>
-            <option [ngValue]="6">6 items per page</option>
-        </select>
-    </div> -->
+        [(page)]="current_page"
+        [collectionSize]="filtered_extensions.length"
+        [pageSize]="page_size"
+        (pageChange)="onPageChange($event)"
+        [maxSize]="5"
+      ></ngb-pagination>
 </div>
